# fress

./: Cargo.toml  README.adoc  build_docs.py  deps.edn
benches/: basic.rs
doc/: bib.adoc  data-structure-memory-management.adoc  docinfo-footer.html  glossary.adoc  heap-polymorphism.adoc  history.adoc  home.adoc  intro-and-goals.adoc  memory.adoc  notes  paper.adoc  polymorphism.adoc  style.css  thesis.adoc  transducers.adoc  wireframe.html  words-500-2.txt  words-500.txt  words-shuf.txt  words.txt
doc/anc/: style.css
doc/images/favicon/: docinfo.html  site.webmanifest
doc/includes/: base.js  docinfo-footer.html  docinfo-header.html  docinfo.html  style.css
doc/review/: index.adoc  nebula.adoc
doc/story/: 2048.adoc  bumblebee-graphics.adoc  coming-to-clojure.adoc  cpp-perf.adoc  fly-in-my-coffee.adoc  forking-trees.adoc  index.adoc  k12.adoc  look-the-same.adoc  optimizing-cron.adoc  panicked-while-panicking.adoc  raining-hair.adoc  seed-to-test.adoc  still-remember.adoc  watch-history.adoc
doc/topic/: big-O.adoc  copy-as-required.adoc  hardware.adoc  implementations.adoc  index.adoc  marsaglia-double-paper.adoc  memory.adoc  on-abstraction.adoc  persistent.adoc  polymorphism.adoc  quadratic-residue.adoc  supplement.adoc  the-problem.adoc  transcribe.adoc  transducers.adoc  vector.adoc
examples/: basic.rs  count_page_faults.sh  count_time_vec_medley.sh  map_medley.rs  play_assoc.rs  play_hash.rs  play_read.rs  play_redn.rs  play_transduce.rs  play_work.rs  vec_medley.rs
src/: bit.rs  dispatch.rs  hello.rs  lib.rs  main.rs  memory.rs  method_union.rs  value.rs  vec.rs
src/array/: mod.rs
src/atom/: mod.rs
src/character/: mod.rs
src/compress/: mod.rs
src/dispatch/: mechanism.rs  mod.rs  shim.rs  value_unit.rs
src/edn/: mod.rs  name.rs  number.rs  reader.rs
src/eval/: assemble.rs  compile.rs  func.rs  mod.rs  node_repl.js  repl_setup.js  repl_worker.js  structure.rs  var.rs
src/float_point/: mod.rs
src/fressian/: mod.rs  reader.rs
src/fuzz/: log.rs  mod.rs  rand.rs
src/graph/: mod.rs
src/handle/: mod.rs
src/hash/: keccak.rs  mod.rs  spooky.rs
src/hash/keccak/: mod.rs
src/inst/: guide.rs  mod.rs
src/integral/: guide.rs  mod.rs
src/keyword/: mod.rs
src/list/: mod.rs  reduce.rs
src/map/: assoc.rs  dissoc.rs  eq.rs  get.rs  mod.rs  pop.rs  reduce.rs  tear_down.rs
src/memory/: anchor.rs  anchored_line.rs  anchored_range.rs  degree.rs  line.rs  mod.rs  schedule.rs  segmen.rs  segment.rs  unit.rs
src/meta/: mod.rs
src/queue/: mod.rs
src/random/: fuzz.rs  mod.rs
src/range/: mod.rs
src/rational/: mod.rs
src/set/: mod.rs
src/sort_map/: mod.rs
src/sorted_map/: mod.rs
src/string/: guide.rs  mod.rs
src/symbol/: guide.rs  mod.rs
src/tagged/: guide.rs  mod.rs
src/trace/: mod.rs
src/transduce/: mod.rs
src/transducer/: mod.rs
src/uuid/: guide.rs  mod.rs
src/value/: conversions.rs  distinguished.rs  generic.rs  mod.rs  operators.rs  value_unit.rs
src/value/arithmetic/: mod.rs
src/value/distinguish/: mod.rs  vector.rs
src/value/immediate/: float_point.rs  (+2 more)
src/vector/: assoc.rs  conj.rs  eq.rs  guide.rs  harness.rs  iter.rs  memory.rs  meta.rs  mod.rs  nth.rs  pop.rs  reduce.rs  tear_down.rs  trace.rs  tree.rs  util.rs
src/wasm/: mod.rs
tests/: basic.rs  compile.rs  read-print.rs  specs.clj
